--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,11 @@
 {
+  "plugin": [
+    "stylelint-prettier"
+  ],
+  "rules": {
+    "selector-class-pattern": null
+  },
   "extends": [
-    "stylelint-config-standard-scss",
-    "stylelint-config-prettier-scss"
+    "stylelint-prettier/recommended"
   ]
 }
