--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.58.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -21,6 +25,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject",
     "lint:css": "stylelint --ignore-path .gitignore '**/*.scss'",
+    "prettify": "prettier --write *.js **/*.js",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -42,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.26.1",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
@@ -49,12 +55,15 @@
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "stylelint": "^15.2.0",
     "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-config-standard-scss": "^7.0.1",
-    "typescript": "^4.9.5",
-    "husky": "^8.0.0"
+    "stylelint-prettier": "^3.0.0",
+    "typescript": "^4.9.5"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": ".eslintrc.js",
