--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prettify": "prettier --write **/*.ts **/*.tsx",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=e6b33cfb8bff"
   },
   "eslintConfig": {
     "extends": [
@@ -77,6 +78,7 @@
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "chromatic": "^6.17.4",
     "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.7.0",
@@ -97,5 +99,7 @@
     "webpack": "^5.82.0"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "readme": "ERROR: No README data found!",
+  "_id": "proj_velogclone@0.1.0"
 }
